--- a/src/Products/Products.css
+++ b/src/Products/Products.css
@@ -1,7 +1,8 @@
 .products_container{
     display: flex;
     flex-wrap: wrap;
-
+    margin-top: 3em;
+    
 }
 .product_item{
     max-width: 20vw;
@@ -19,5 +20,5 @@
     background-color: transparent;
     color: white;
     border: 2px solid rgba(245, 199, 26, 0.7);
-    
+
 }
