--- a/src/Products/Products.css
+++ b/src/Products/Products.css
@@ -2,11 +2,12 @@
     display: flex;
     flex-wrap: wrap;
     margin-top: 3em;
+    width: 100vw;
+    justify-content: center;
     
 }
 .product_item{
     max-width: 20vw;
-    border: 1px solid red;
     padding: 1em;
     text-align: center;
 }
@@ -20,5 +21,5 @@
     background-color: transparent;
     color: white;
     border: 2px solid rgba(245, 199, 26, 0.7);
-
+    padding: 0.5em 2.1em;
 }
