--- a/src/Products/Products.css
+++ b/src/Products/Products.css
@@ -1,3 +1,6 @@
+body{
+    font-family: 'Josefin Sans', sans-serif;
+}
 .products_container{
     display: flex;
     flex-wrap: wrap;
@@ -11,12 +14,13 @@
     padding: 1em 4em;
     margin:1em;
     text-align: center;
+    border-radius: 5%;
     box-shadow: rgb(69, 60, 26) 0px 0px 20px, rgb(182 120 176 / 7%) 0px 0px 32px;
 }
 .product_item img {
     max-width: 100%;
 }
-.product_item h5{
+.product_item h3,h5{
     color: white;
 }
 .product_item button{
@@ -24,4 +28,5 @@
     color: white;
     border: 2px solid rgba(245, 199, 26, 0.7);
     padding: 0.5em 2.1em;
+    font-family: 'Josefin Sans', sans-serif;
 }
