--- a/src/Products/Products.css
+++ b/src/Products/Products.css
@@ -14,8 +14,8 @@ body{
     padding: 1em 4em;
     margin:1em;
     text-align: center;
-    border-radius: 5%;
-    box-shadow: rgb(69, 60, 26) 0px 0px 20px, rgb(182 120 176 / 7%) 0px 0px 32px;
+    border-radius: 6.9%;
+    box-shadow: rgb(69, 60, 26) 0px 0px 20px, rgb(182 120 176 / 6.9%) 5px 15px 32px;
 }
 .product_item img {
     max-width: 100%;
@@ -27,6 +27,9 @@ body{
     background-color: transparent;
     color: white;
     border: 2px solid rgba(245, 199, 26, 0.7);
-    padding: 0.5em 2.1em;
+    padding: 0.5em;
     font-family: 'Josefin Sans', sans-serif;
+    margin:0.69em 0;
+    font-size: 1em;
+    min-width: 100%;
 }
